New Problem: ---> 0111-Minimum-Depth-of-Binary-Tree/; .gitignore ---> 1652_Defuse_the_Bomb.jpg, 125_Valid_Palindrome.jpg

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 Template.md
+Leetcode-Problems-Submit-Screenshots/1652_Defuse_the_Bomb.jpg
+Leetcode-Problems-Submit-Screenshots/125_Valid_Palindrome.jpg
