New Problem 2558-Take-Gifts-From-the-Richest-Pile/; .gitignore(+)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Template.md
+2779_Maximum_Beauty_of_an_Array_After_Applying_Operation.jpg
 2577_Minimum_Time_to_Visit_a_Cell_In_a_Grid.jpg
 3_Longest_Substring_Without_Repeating_Characters.jpg
