New Problem: ---> 1792-Maximum-Average-Pass-Ratio/; .gitignore(+)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Template.md
 2577_Minimum_Time_to_Visit_a_Cell_In_a_Grid.jpg
 3_Longest_Substring_Without_Repeating_Characters.jpg
+1792_Maximum_Average_Pass_Ratio_Space.jpg
+1792_Maximum_Average_Pass_Ratio_Time.jpg
